# exnaton_challenge

./: .env  Dockerfile  README.md  docker-compose.yaml
backend/: main.py  pyproject.toml  yoyo.ini
backend/migrations/: 20241011_01_VNyZ1-initial-migration.py
backend/models/: __init__.py
backend/models/measurement/: __init__.py  measurement.py
backend/models/session/: session.py
backend/scripts/: __init__.py  populate.py
backend/src/: base_resource.py
backend/src/analytics/: __init__.py  resource.py  schema.py
backend/src/measurement/: __init__.py  resource.py  schema.py
backend/src/tags/: __init__.py  resource.py  schema.py
backend/src/utils/: __init__.py  schema_to_swagger.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Context.tsx  Header.tsx  ResizeableBox.tsx
frontend/src/components/context/: DataSelectBar.tsx  EnergyTable.tsx  Tabs.tsx
frontend/src/components/context/Energy/: EnergyChart.tsx  EnergyOptions.tsx
frontend/src/interfaces/: Measurement.ts  Tags.ts
frontend/src/utils/: getLabeledData.ts  getUniqueDates.ts
